--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jquery.easing": "^1.4.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
